--- a/main.html
+++ b/main.html
@@ -52,7 +52,8 @@
   </div>
   
   <div class="item1">
-    <img src="D:\OneDrive\Desktop\Shop\images\t-shirt.jpg"/>
+<!--     <img src="D:\OneDrive\Desktop\Shop\images\t-shirt.jpg"/> -->
+      <img src="images\t-shirt.jpg"/>
     <p>T-shirts</p>
   </div>
 
