--- a/main.html
+++ b/main.html
@@ -47,22 +47,23 @@
 
 <div class="wrapper2">
    <div class="item1">
-    <img class="shoe" src="D:\OneDrive\Desktop\Shop\images\smaller.jpg"/>
+    <img class="shoe" src="images\smaller.jpg"/>
     <p>Shoes</p>
   </div>
   
   <div class="item1">
-    <img src="D:\OneDrive\Desktop\Shop\images\t-shirt.jpg"/>
+    <!-- <img src="D:\OneDrive\Desktop\Shop\images\t-shirt.jpg"/> -->
+    <img src="images\t-shirt.jpg"/>
     <p>T-shirts</p>
   </div>
 
   <div class="item1">
-    <img src="D:\OneDrive\Desktop\Shop\images\w2.jpg"/>
+    <img src="images\w2.jpg"/>
     <p>Watches</p>
   </div>
 
   <div class="item1">
-    <img src="D:\OneDrive\Desktop\Shop\images\p1.jpg"/>
+    <img src="images\p1.jpg"/>
     <p>Perfumes</p>
   </div>
 
@@ -83,17 +84,17 @@
 <!-- 1 -->
 <div class="wrapper3">
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\smaller.jpg"/>
+    <img src="images\smaller.jpg"/>
     <p>Vans Old School - 50USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\s4.jpg"/>
+    <img src="images\s4.jpg"/>
     <p>Under Armour Hovr- 55USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\s5.jpg"/>
+    <img src="images\s5.jpg"/>
     <p>Amberjack Chestnut - 60USD</p>
   </div>
 </div>
@@ -101,17 +102,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\t-shirt.jpg"/>
+    <img src="images\t-shirt.jpg"/>
     <p>Men's Ultimate Black - 40USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\bluetshirt.jpg"/>
+    <img src="images\bluetshirt.jpg"/>
     <p>Joe's USA Blue - 43USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\t4.jpg"/>
+    <img src="images\t4.jpg"/>
     <p>Joe's USA Orange - 39USD</p>
   </div>
 </div>
@@ -119,17 +120,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\w2.jpg"/>
+    <img src="images\w2.jpg"/>
     <p>Emporio Armani Gold - 250USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\w3.jpg"/>
+    <img src="images\w3.jpg"/>
     <p>Casio Timeless Grey - 75USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\w4.jpg"/>
+    <img src="images\w4.jpg"/>
     <p>Cheetah Leather - 100USD</p>
   </div>
 </div>
@@ -137,17 +138,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\p1.jpg"/>
+    <img src="images\p1.jpg"/>
     <p>VERSACE Eros - 25USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\p2.jpg"/>
+    <img src="images\p2.jpg"/>
     <p>Antonio BANDERAS - 35USD</p>
   </div>
 
   <div class="item">
-    <img src="D:\OneDrive\Desktop\Shop\images\p3.jpg"/>
+    <img src="images\p3.jpg"/>
     <p>ARMANI Stronger With You - 55USD</p>
   </div>
 </div>
