--- a/main.html
+++ b/main.html
@@ -47,13 +47,13 @@
 
 <div class="wrapper2">
    <div class="item1">
-    <img class="shoe" src="images\smaller.jpg"/>
+    <img class="shoe" src="./images/smaller.jpg"/>
     <p>Shoes</p>
   </div>
   
   <div class="item1">
     <!-- <img src="D:\OneDrive\Desktop\Shop\images\t-shirt.jpg"/> -->
-    <img src="images\t-shirt.jpg"/>
+    <img src="./images/t-shirt.jpg"/>
     <p>T-shirts</p>
   </div>
 
