--- a/main.html
+++ b/main.html
@@ -58,12 +58,12 @@
   </div>
 
   <div class="item1">
-    <img src="images\w2.jpg"/>
+    <img src="./images/w2.jpg"/>
     <p>Watches</p>
   </div>
 
   <div class="item1">
-    <img src="images\p1.jpg"/>
+    <img src="./images/p1.jpg"/>
     <p>Perfumes</p>
   </div>
 
@@ -84,17 +84,17 @@
 <!-- 1 -->
 <div class="wrapper3">
   <div class="item">
-    <img src="images\smaller.jpg"/>
+    <img src="./images/smaller.jpg"/>
     <p>Vans Old School - 50USD</p>
   </div>
 
   <div class="item">
-    <img src="images\s4.jpg"/>
+    <img src="./images/s4.jpg"/>
     <p>Under Armour Hovr- 55USD</p>
   </div>
 
   <div class="item">
-    <img src="images\s5.jpg"/>
+    <img src="./images/s5.jpg"/>
     <p>Amberjack Chestnut - 60USD</p>
   </div>
 </div>
@@ -102,17 +102,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="images\t-shirt.jpg"/>
+    <img src="./images/t-shirt.jpg"/>
     <p>Men's Ultimate Black - 40USD</p>
   </div>
 
   <div class="item">
-    <img src="images\bluetshirt.jpg"/>
+    <img src="./images/bluetshirt.jpg"/>
     <p>Joe's USA Blue - 43USD</p>
   </div>
 
   <div class="item">
-    <img src="images\t4.jpg"/>
+    <img src="./images/t4.jpg"/>
     <p>Joe's USA Orange - 39USD</p>
   </div>
 </div>
@@ -120,17 +120,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="images\w2.jpg"/>
+    <img src="./images/w2.jpg"/>
     <p>Emporio Armani Gold - 250USD</p>
   </div>
 
   <div class="item">
-    <img src="images\w3.jpg"/>
+    <img src="./images/w3.jpg"/>
     <p>Casio Timeless Grey - 75USD</p>
   </div>
 
   <div class="item">
-    <img src="images\w4.jpg"/>
+    <img src="./images/w4.jpg"/>
     <p>Cheetah Leather - 100USD</p>
   </div>
 </div>
@@ -138,17 +138,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="images\p1.jpg"/>
+    <img src="./images/p1.jpg"/>
     <p>VERSACE Eros - 25USD</p>
   </div>
 
   <div class="item">
-    <img src="images\p2.jpg"/>
+    <img src="./images/p2.jpg"/>
     <p>Antonio BANDERAS - 35USD</p>
   </div>
 
   <div class="item">
-    <img src="images\p3.jpg"/>
+    <img src="./images/p3.jpg"/>
     <p>ARMANI Stronger With You - 55USD</p>
   </div>
 </div>
