--- a/main.html
+++ b/main.html
@@ -47,23 +47,23 @@
 
 <div class="wrapper2">
    <div class="item1">
-    <img class="shoe" src="./images/smaller.jpg"/>
+    <img class="shoe" src="./images/smaller.JPG"/>
     <p>Shoes</p>
   </div>
   
   <div class="item1">
     <!-- <img src="D:\OneDrive\Desktop\Shop\images\t-shirt.jpg"/> -->
-    <img src="./images/t-shirt.jpg"/>
+    <img src="./images/t-shirt.JPG"/>
     <p>T-shirts</p>
   </div>
 
   <div class="item1">
-    <img src="./images/w2.jpg"/>
+    <img src="./images/w2.JPG"/>
     <p>Watches</p>
   </div>
 
   <div class="item1">
-    <img src="./images/p1.jpg"/>
+    <img src="./images/p1.JPG"/>
     <p>Perfumes</p>
   </div>
 
@@ -84,17 +84,17 @@
 <!-- 1 -->
 <div class="wrapper3">
   <div class="item">
-    <img src="./images/smaller.jpg"/>
+    <img src="./images/smaller.JPG"/>
     <p>Vans Old School - 50USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/s4.jpg"/>
+    <img src="./images/s4.JPG"/>
     <p>Under Armour Hovr- 55USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/s5.jpg"/>
+    <img src="./images/s5.JPG"/>
     <p>Amberjack Chestnut - 60USD</p>
   </div>
 </div>
@@ -102,17 +102,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="./images/t-shirt.jpg"/>
+    <img src="./images/t-shirt.JPG"/>
     <p>Men's Ultimate Black - 40USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/bluetshirt.jpg"/>
+    <img src="./images/bluetshirt.JPG"/>
     <p>Joe's USA Blue - 43USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/t4.jpg"/>
+    <img src="./images/t4.JPG"/>
     <p>Joe's USA Orange - 39USD</p>
   </div>
 </div>
@@ -120,17 +120,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="./images/w2.jpg"/>
+    <img src="./images/w2.JPG"/>
     <p>Emporio Armani Gold - 250USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/w3.jpg"/>
+    <img src="./images/w3.JPG"/>
     <p>Casio Timeless Grey - 75USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/w4.jpg"/>
+    <img src="./images/w4.JPG"/>
     <p>Cheetah Leather - 100USD</p>
   </div>
 </div>
@@ -138,17 +138,17 @@
 <br>
 <div class="wrapper3">
   <div class="item">
-    <img src="./images/p1.jpg"/>
+    <img src="./images/p1.JPG"/>
     <p>VERSACE Eros - 25USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/p2.jpg"/>
+    <img src="./images/p2.JPG"/>
     <p>Antonio BANDERAS - 35USD</p>
   </div>
 
   <div class="item">
-    <img src="./images/p3.jpg"/>
+    <img src="./images/p3.JPG"/>
     <p>ARMANI Stronger With You - 55USD</p>
   </div>
 </div>
